k8s-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: LoadBalancer # Exposing externally

---
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  selector:
    app: express
  ports:
  - name: http
    port: 80
    targetPort: 3001
  type: ClusterIP # Exposing externally

---
apiVersion: v1
kind: Service
metadata:
  name: webapi-service
spec:
  selector:
    app: webapi
  ports:
  - name: http
    port: 80
    targetPort: 5000
  type: LoadBalancer # Exposing externally

---
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  selector:
    app: email
  ports:
  - name: http
    port: 80
    targetPort: 6000
  type: LoadBalancer # Exposing externally

---
apiVersion: v1
kind: Service
metadata:
  name: sql-server-service
spec:
  selector:
    app: sql-server
  ports:
  - name: db
    port: 1433
    targetPort: 1433
  type: ClusterIP # Not exposed externally
