k8s-resources/ingress.yaml
# Ingress configurations for routing to different services.
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: showcase-ingress
  namespace: showcase-rv-hub
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: showcaserv.com
    http:
      paths:
      - path: /react
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 3000
      - path: /express
        pathType: Prefix
        backend:
          service:
            name: express-service
            port:
              number: 3001
      - path: /webapi
        pathType: Prefix
        backend:
          service:
            name: webapi-service
            port:
              number: 5000
      - path: /email
        pathType: Prefix
        backend:
          service:
            name: email-service
            port:
              number: 6000
    tls:
    - hosts: showcaserv.com
      secretName: my.tls.secret
